--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     env: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn mysite.wsgi:application"
-    autoDeploy: false
+    autoDeploy: true
     envVars:
       - key: DATABASE_URL
         fromDatabase:
